tests/lex/invalid/binary_literal_extra_underscore.zn
def f() {
    var x = 0b0__1;
}
